--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skillloop-landing",
-  "homepage": "https://dhwanit10.github.io/Skill-Swap",
+  "homepage": "https://dhwanit10.github.io/SkillLoop",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
